# barsdiary

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: build_check.yml  ci.yml  pypi_integration.yml
barsdiary/: __init__.py  api.py  sync.py  types.py
barsdiary/tests/: test_test.py
docs/: index.md  overview.md
