[tool.poetry]
name = "barsdiary"
version = "0.0.1"
description = "Python library for working with API \"БАРС.Web-Образование\""
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mironovmeow/barsdiary"
repository = "https://github.com/mironovmeow/barsdiary"
# documentation = "https://barsdiary.readthedocs.io/ru/latest/"
keywords = [
    "python",
    "aiohttp",
    "pydantic",
    "asyncio"
]
authors = ["mironovmeow <71277890+mironovmeow@users.noreply.github.com>"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mironovmeow/barsdiary/issues"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
